--- a/ssf/liferay/resources/tomcat/conf/jaas.config
+++ b/ssf/liferay/resources/tomcat/conf/jaas.config
@@ -1,10 +1,10 @@
 PortalRealm {
-	com.liferay.portal.shared.security.jaas.PortalLoginModule required;
+	com.liferay.portal.kernel.security.jaas.PortalLoginModule required;
 };
 //
-// This default login module is commented out so that we can bypass
-// Slide's internal security checking and use our own custom 
-// authenticator instead.
+// SiteScape: This default login module is commented out so that 
+// we can bypass Slide's internal security checking and use our 
+// own custom authenticator instead.
 //slide_login {
 //org.apache.slide.jaas.spi.SlideLoginModule required
 //namespace=slide;
