--- a/trunk/ssf/build.properties
+++ b/trunk/ssf/build.properties
@@ -75,7 +75,7 @@ libraries.current=activation.jar,activemq.jar,addressing.jar,antlr.jar,aopallian
 ## Liferay kits
 ##
 
-liferay.tomcat.zip.file.name=liferay-portal-tomcat-jdk5-4.0.0-patched-by-ss-062806.zip
+liferay.tomcat.zip.file.name=liferay-portal-tomcat-jdk5-4.1.2.zip
 #liferay.tomcat.zip.file.name=liferay-portal-pro-3.6.1-tomcat.zip
 liferay.jboss-tomcat.zip.file.name=liferay-portal-jboss-tomcat-4.1.2.zip
 
