--- a/trunk/ssf/ssfs/build.xml
+++ b/trunk/ssf/ssfs/build.xml
@@ -88,20 +88,25 @@
 				<!-- On Tomcat, Liferay's archives are deployed in common directory.
 				     Delete the following jar files from ssfs so that it uses the
 				     ones deployed with Liferay. Otherwise, it becomes problematic. -->
-				<delete>
+				<!-- With 4.1.2, Liferay's archives are no longer deployed in the 
+				     server's common area. So we no longer need to delete the 
+				     following archives. -->
+				<!--<delete>
 					<fileset dir="${app.server.ssfs.dir}/WEB-INF/lib">
 						<include name="commons-logging-*.jar"/>
 						<include name="log4j-*.jar"/>
 					</fileset>
-				</delete>
+				</delete>-->
 			</then>
 			<elseif>
 				<equals arg1="${app.server.type}" arg2="jboss-tomcat" />
 				<then>
-					<!-- JBoss does not allow applications to load their own commons logging classes. 
-					     They must use the shared one that JBoss already has. -->
+					<!-- JBoss does not allow applications to load their own commons logging
+					     classes. They must use the shared one that JBoss already has. 
+					     The same is also true with log4j archive. -->
 					<delete>
 						<fileset dir="${app.server.deploy.dir}/ssfs.war/WEB-INF/lib" includes="commons-logging*.jar"/>
+						<fileset dir="${app.server.deploy.dir}/ssfs.war/WEB-INF/lib" includes="log4j*.jar"/>
 					</delete>		
 				</then>
 			</elseif>
