--- a/trunk/ssf/app.server.properties
+++ b/trunk/ssf/app.server.properties
@@ -43,6 +43,6 @@ app.server.liferay.jboss-tomcat.dir=C:/sitescape-forum-0.1.0-liferay-jboss-tomca
 app.server.liferay.jboss-tomcat.server.dir=${app.server.liferay.jboss-tomcat.dir}/server/default
 app.server.liferay.jboss-tomcat.deploy.dir=${app.server.liferay.jboss-tomcat.server.dir}/deploy
 app.server.liferay.jboss-tomcat.lib.dir=${app.server.liferay.jboss-tomcat.deploy.dir}/liferay-portal.ear/lib
-app.server.liferay.jboss-tomcat.ssf.dir=${app.server.liferay.jboss-tomcat.deploy.dir}/1ssf.war
+app.server.liferay.jboss-tomcat.ssf.dir=${app.server.liferay.jboss-tomcat.deploy.dir}/ssf.war
 app.server.liferay.jboss-tomcat.ssfs.dir=${app.server.liferay.jboss-tomcat.deploy.dir}/ssfs.war
 
