Change resource name from slide to ssfs to avoid naming conflict with other (potential) webapps under the same server.

--- a/ssf/liferay/resources/tomcat/conf/jaas.config
+++ b/ssf/liferay/resources/tomcat/conf/jaas.config
@@ -5,12 +5,12 @@ PortalRealm {
 // SiteScape: This default login module is commented out so that 
 // we can bypass Slide's internal security checking and use our 
 // own custom authenticator instead.
-//slide_login {
+//ssfs_login {
 //org.apache.slide.jaas.spi.SlideLoginModule required
 //namespace=slide;
 //};
 //
-slide_login {
+ssfs_login {
 org.apache.slide.simple.authentication.JAASLoginModule required
 factoryClassName=com.sitescape.ef.ssfs.wck.AuthenticationManager
 slideRole=root;
