--- a/trunk/ssf/ssfs/resources/slide-src/src/conf/webapp/slide.properties
+++ b/trunk/ssf/ssfs/resources/slide-src/src/conf/webapp/slide.properties
@@ -8,7 +8,7 @@ org.apache.slide.security=false
 
 # Automatically perform locking checks
 # Default : true
-org.apache.slide.lock=false
+org.apache.slide.lock=true
 
 # Use version control (DeltaV)
 # Default: true
