Enhancement to Slide source code to make it handle owner info property of a lock; This missing feature is used by popular tool such as Xythos Drive, so we need to support it.

--- a/ssf/ssfs/build.xml
+++ b/ssf/ssfs/build.xml
@@ -162,7 +162,8 @@
 		<copy todir="C:/slide" overwrite="true">
 			<fileset dir="resources/slide-src" includes="**/*.java" />
 		</copy>
+		<copy file="${temp.dir}/WEB-INF/lib/jakarta-slide-wck-1.0.jar" tofile="C:/ss/v8/ssf/lib/jakarta-slide-wck.jar" />
 		<copy file="${temp.dir}/WEB-INF/lib/slide-kernel-2.2pre1.jar" tofile="C:/ss/v8/ssf/lib/slide-kernel.jar" />
-		<copy file="${temp.dir}/WEB-INF/lib/slide-webdavservlet-2.2pre1.jar" todir="C:/ss/v8/ssf/lib" />
+		<copy file="${temp.dir}/WEB-INF/lib/slide-webdavservlet-2.2pre1.jar" tofile="C:/ss/v8/ssf/lib/slide-webdavservlet-2.2pre1.jar" />
 	</target>
 </project>
